# what-cloud

./: .gitignore  README.md  TODO  terminal.ps1  terminal_horizontal.ps1  terminal_vertical.ps1
backend/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  build.sh  config.toml  database.sqlite  database.sqlite-journal  icon-conf.json
backend/icons/: untitled.afdesign
backend/pages/: admin.html
backend/src/: admin.rs  api_mount.rs  auth.rs  config.rs  icons.rs  main.rs  token_validizer.rs  utils.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/database/: mod.rs  up.sql
backend/src/fs/: async_buf.rs  blocking_buf.rs  download.rs  metadata.rs  mod.rs  netfilepath.rs  partial_file.rs  previews.rs  shared.rs  upload.rs  write_read_pipe.rs  zipwriter.rs
backend/test_data/asdf1234/: geekbench5
frontend/: .browserslistrc  .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  main.ts  shims-vue.d.ts
frontend/src/business/: fs.js  fs.ts  globalState.js  nettypes.ts  upload.ts  utils.js  utils.ts
frontend/src/components/: DownloadButton.vue  FSItem.vue  FileInfo.vue  FileList.vue  NewFolderButton.vue  PathDisplay.vue  PreviewModal.vue  StringInsertModal.vue  UploadButton.vue
frontend/src/router/: index.js  index.ts
frontend/src/store/: index.js  index.ts
frontend/src/views/: Files.vue  Home.vue  Login.vue  Logout.vue  SharedList.vue
frontend_v3/: README.md  package-lock.json  package.json
frontend_v3/public/: index.html
frontend_v3/src/: App.vue
frontend_v3/src/business/: fs.ts  utils.ts
test_data/DEBUG_ID/: a.txt
test_data/asdf1234/: ttete.txt
(+20 files in other folders)
