[package]
name = "backend"
version = "0.1.0"
authors = ["lokmeinmatz <matze.kind@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_cors = "0.5.1"
log = "0.4.11"
simplelog = "0.8.0"
rand = "0.7.3"
sha3 = "0.9.1"
rusqlite = {version = "0.23.1", features = ["bundled"]}
dotenv = "0.15.0"
svg = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["json"]
