[package]
name = "backend"
version = "0.1.4"
authors = ["lokmeinmatz <matze.kind@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.1", features=["json"]}
#rocket = { path = "../../Rocket/core/lib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
log = "0.4.11"
simplelog = "0.10.*"
rand = "0.8.4"
sha3 = "0.9.1"
rusqlite = {version = "0.26.1", features = ["bundled"]}
dotenv = "0.15.0"
svg = "0.10.0"
chrono = {version = "0.4", features = ["serde"]}
streamed-zip-rs = { git = "https://github.com/lokmeinmatz/streamed-zip-rs"}
ringbuf = "0.2.2"
lazy_static = "1.4.0"
path-slash = "0.1.3"
crossbeam = "0.8.0"
image = "0.23.10"
tokio = { version = "1.13.0", features = ["sync", "io-util"] }
medallion = "2.4.0"
anyhow = "1.0"
regex = "1.4.2"

[profile.test.package.tokio]
features = ["sync", "io-util", "rt"]